<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <Button
            android:id="@+id/button_start"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:text="@string/runTest" />

        <Button
            android:id="@+id/button_stop"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:text="@string/cancelTest" />

        <Button
            android:id="@+id/button_share"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:text="@string/share" />
    </LinearLayout>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <TextView
            android:id="@+id/single_text_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="4dp"
            android:text="Single Test #"/>

        <EditText
            android:id="@+id/single_test_index"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="8"
            android:inputType="number"
            android:text=""/>
    </LinearLayout>

    <TextView
        android:id="@+id/text_status"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:minLines="2"
        android:maxLines="13"
        android:text="@string/auto_default_status"
        android:textSize="18sp"
        android:textStyle="bold"
        />
    <ScrollView
        android:id="@+id/text_log_auto_scroller"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">
    <TextView
        android:id="@+id/text_log_auto"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:scrollbars = "vertical"
        android:gravity="bottom"
        android:text="@string/log_of_test_results"
        />
    </ScrollView>

</LinearLayout>
