<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:fitsSystemWindows="true"
    tools:context="com.mobileer.oboetester.RoundTripLatencyActivity">

    <LinearLayout
        android:id="@+id/title_bar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:orientation="horizontal"
        android:elevation="4dp"
        android:gravity="center_vertical"
        android:paddingStart="16dp"
        android:paddingEnd="16dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/title_activity_rt_latency"
            android:textColor="@android:color/black"
            android:textSize="20sp"
            android:textStyle="bold" />

    </LinearLayout>

    <ScrollView
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fillViewport="true"
        app:layout_constraintTop_toBottomOf="@+id/title_bar"
        tools:context="com.mobileer.oboetester.RoundTripLatencyActivity" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin" >

        <com.mobileer.oboetester.StreamConfigurationView
            android:id="@+id/inputStreamConfiguration"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="horizontal" />

        <com.mobileer.oboetester.InputMarginView
            android:id="@+id/input_margin_view"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center" />

        <com.mobileer.oboetester.StreamConfigurationView
            android:id="@+id/outputStreamConfiguration"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="horizontal" />

        <com.mobileer.oboetester.BufferSizeView
            android:id="@+id/buffer_size_view"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="horizontal" />

        <com.mobileer.oboetester.WorkloadView
            android:id="@+id/workload_view"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="horizontal" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <Button
                android:id="@+id/button_measure"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:onClick="onMeasure"
                android:text="@string/measure"
                android:textSize="10sp" />

            <Button
                android:id="@+id/button_average"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="wrap_content"
                android:onClick="onAverage"
                android:text="@string/average"
                android:textSize="10sp" />

            <Button
                android:id="@+id/button_scan"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="wrap_content"
                android:enabled="false"
                android:onClick="onScan"
                android:text="@string/scan"
                android:textSize="10sp" />

            <Button
                android:id="@+id/button_cancel"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="wrap_content"
                android:enabled="false"
                android:onClick="onCancel"
                android:text="@string/cancel"
                android:textSize="10sp" />

            <Button
                android:id="@+id/button_share"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="wrap_content"
                android:onClick="onShareFile"
                android:text="@string/share"
                android:textSize="10sp" />
        </LinearLayout>

        <com.mobileer.oboetester.CommunicationDeviceView
            android:id="@+id/comm_device_view"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="horizontal" />

        <TextView
            android:id="@+id/text_status"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:lines="16"
            android:text="@string/loopback_instructions_latency"
            android:textSize="18sp"
            android:textStyle="bold" />

    </LinearLayout>
    </ScrollView>
</LinearLayout>
