<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:fitsSystemWindows="true"
    tools:context="com.mobileer.oboetester.RecorderActivity">

    <LinearLayout
        android:id="@+id/title_bar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:orientation="horizontal"
        android:elevation="4dp"
        android:gravity="center_vertical"
        android:paddingStart="16dp"
        android:paddingEnd="16dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/title_activity_recorder"
            android:textColor="@android:color/black"
            android:textSize="20sp"
            android:textStyle="bold" />

    </LinearLayout>

    <ScrollView
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fillViewport="true"
        app:layout_constraintTop_toBottomOf="@+id/title_bar"
        tools:context="com.mobileer.oboetester.RecorderActivity" >
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin" >

        <com.mobileer.oboetester.StreamConfigurationView
            android:id="@+id/streamConfiguration"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="horizontal" />

        <com.mobileer.oboetester.InputMarginView
            android:id="@+id/input_margin_view"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <Button
                android:id="@+id/button_start_recording"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="wrap_content"
                android:onClick="onStartRecording"
                android:text="@string/recordAudio"
                />

            <Button
                android:id="@+id/button_stop_record_play"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="wrap_content"
                android:onClick="onStopRecordPlay"
                android:text="@string/stopAudio"
                />

            <Button
                android:id="@+id/button_start_playback"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="wrap_content"
                android:onClick="onStartPlayback"
                android:text="@string/playAudio"
                />

            <Button
                android:id="@+id/button_share"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="wrap_content"
                android:onClick="onShareFile"
                android:text="@string/share"
                />
        </LinearLayout>

        <TextView
            android:id="@+id/status_view"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:lines="3"
            android:text="@string/init_status" />

        <com.mobileer.oboetester.VolumeBarView
            android:id="@+id/volumeBar0"
            android:layout_width="fill_parent"
            android:layout_marginBottom="4dp"
            android:layout_height="20dp" />

        <com.mobileer.oboetester.VolumeBarView
            android:id="@+id/volumeBar1"
            android:layout_width="fill_parent"
            android:layout_marginBottom="4dp"
            android:layout_height="20dp" />

        <com.mobileer.oboetester.VolumeBarView
            android:id="@+id/volumeBar2"
            android:layout_width="fill_parent"
            android:layout_marginBottom="4dp"
            android:layout_height="20dp" />

        <com.mobileer.oboetester.VolumeBarView
            android:id="@+id/volumeBar3"
            android:layout_width="fill_parent"
            android:layout_marginBottom="4dp"
            android:layout_height="20dp" />

    </LinearLayout>
    </ScrollView>
</LinearLayout>
